2006-09-24	tsch

	* t/CairoSurface.t: Don't check the specific type of similar
	surfaces created from PS and PDF surfaces; it's not reliable.

	* xs/CairoSurface.xs: Cosmetical changes.

2006-09-04	tsch

	* Cairo.pm, NEWS, README: Stable release 1.00.

2006-08-27	tsch

	* Makefile.PL: Make EU::MM export our symbols on Win32.

2006-08-20	tsch

	* MakeHelper.pm: Revert the last commit which used real enum types
	instead of int; it broke compilation.  Also alter the way unknown
	enum types are dealt with: don't declare and implement stub
	converters, just omit them.  Still declare typemaps for them
	though, to make xsubpp happy.

2006-08-20	tsch

	* MakeHelper.pm: Add the infrastructure necessary to support
	protecting the enum related things with #ifdef, if needed.  Also
	use the real enum types for the enum converters, instead of just
	int.

2006-08-15	tsch

	* Cairo.pm, MANIFEST, NEWS, README: Beta release 0.92.

2006-08-13	tsch

	* CairoSurface.xs (read_func_marshaller): Use POPs, SvPV, and
	sv_len instead of POPpx to avoid problems on perl 5.8.8 reported
	by Joe Smith and Alexey Tourbin.

2006-08-11	tsch

	* examples/png-streams.pl: New example that demonstrates how to
	use the PNG stream functions.

	* t/CairoSurface.t: Whitespace fix.

2006-08-11	tsch

	* CairoSurface.xs: Patch from Yaakov S puts version guards around
	a few PDF and PS functions that appeared in 1.2.0.

	* t/CairoSurface.t: Do the same for the corresponding tests.

2006-08-10	tsch

	* Cairo.pm, NEWS, README: Beta release 0.91.

2006-08-10	tsch

	* Cairo.xs, CairoFont.xs, CairoPattern.xs, CairoSurface.xs,
	MakeHelper.pm, Makefile.PL, cairo-perl-private.h, t/Cairo.t,
	t/CairoFont.t, t/CairoPattern.t, t/CairoSurface.t: Make it
	possible to compile and run the bindings against cairo 1.0.x.  Use
	a package lookup table for patterns and surfaces to work around
	the lack of type accessors.  Add version guards around things that
	were introduced in 1.2.0.

	* CairoSurface.xs: Use OUTLIST for